change caterer name

--- a/html/index-fr.html
+++ b/html/index-fr.html
@@ -59,10 +59,10 @@
                 <li style="list-style-type: '10h00';"><p>Jeux ext&eacute;rieur et lunch sur place, arrivez &agrave; votre convenance.</p></li>
                 <li style="list-style-type: '14h00';"><p>S&eacute;ance photos pour les mari&eacute;s et leurs familles.</p></li>
                 <li style="list-style-type: '16h00';"><p>C&eacute;r&eacute;monie.</p></li>
-                <li style="list-style-type: '16h30';"><p>Ap&eacute;ro, pr&eacute;par&eacute; et servi par le Rustic Market Garden.</p></li>
+                <li style="list-style-type: '16h30';"><p>Ap&eacute;ro, pr&eacute;par&eacute; et servi par Well Seasoned.</p></li>
                 <li style="list-style-type: '17h30';"><p>Veuillez trouver votre si&egrave;ge.</p></li>
                 <li style="list-style-type: '17h45';"><p>Quelques mots de la part des mari&eacute;s.</p></li>
-                <li style="list-style-type: '18h00';"><p>Souper et dessert, pr&eacute;par&eacute;s et servis par le Rustic Market Garden.</p></li>
+                <li style="list-style-type: '18h00';"><p>Souper et dessert, pr&eacute;par&eacute;s et servis par Well Seasoned.</p></li>
                 <li style="list-style-type: '20h00';"><p>Trivia.</p></li>
                 <li style="list-style-type: '21h00';"><p>Danse et feu de camp.</p></li>
                 <li style="list-style-type: '23h59';"><p>Souper de minuit!</p></li>
