--- a/html/index.html
+++ b/html/index.html
@@ -56,10 +56,10 @@
                 <li style="list-style-type: '10:00';"><p>Games and light sandwich lunch at venue, at your convenience</p></li>
                 <li style="list-style-type: '14:00';"><p>Photos for bride, groom and family</p></li>
                 <li style="list-style-type: '16:00';"><p>Wedding ceremony</p></li>
-                <li style="list-style-type: '16:30';"><p>Appies catered by the Rustic Market Garden and drinks</p></li>
+                <li style="list-style-type: '16:30';"><p>Appies catered by Well Seasoned and drinks</p></li>
                 <li style="list-style-type: '17:30';"><p>Please find your seats</p></li>
                 <li style="list-style-type: '17:45';"><p>Bride and groom address</p></li>
-                <li style="list-style-type: '18:00';"><p>Supper and dessert, catered by the Rustic Market Garden</p></li>
+                <li style="list-style-type: '18:00';"><p>Supper and dessert, catered by Well Seasoned</p></li>
                 <li style="list-style-type: '20:00';"><p>Trivia</p></li>
                 <li style="list-style-type: '21:00';"><p>Campfire and dance</p></li>
                 <li style="list-style-type: '23:59';"><p>Midnight lunch!</p></li>
