add dino tracks map

--- a/html/index-fr.html
+++ b/html/index-fr.html
@@ -99,6 +99,19 @@
         </div>
         </div>
 
+        
+        <div class="banner banner-not-first">
+            <div class="banner-inside">
+                <h1>Directions pour l'activit&eacute; du dimanche</h1>
+                <hr>
+                <p>
+                    Attention: cette carte n'indique PAS les directions pour le mariage! Elle donne les directions pour ceux et celles qui d&eacute;sirent se joindre &agrave; nous pour une petite excursion dans l'arri&egrave;re-pays, dimanche apr&egrave;s-midi.
+                </p>
+                <iframe src="https://www.google.com/maps/d/embed?mid=1A3UQ5f9J6AkcC4AB6iHDl-QSn7jzdAM&ehbc=2E312F" width="640" height="480"></iframe>
+            </div>
+        </div>
+    
+
         <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
             <img src="static/images/img2.jpg" /><img src="static/images/img3.jpg" /><img src="static/images/img4.jpg" />
         </div>
