--- a/html/index.html
+++ b/html/index.html
@@ -95,6 +95,17 @@
         </div>
         </div>
 
+        <div class="banner banner-not-first">
+        <div class="banner-inside">
+            <h1>Directions for Sunday's backcountry trip</h1>
+            <hr>
+            <p>
+                These are NOT the directions to the venue! They are for those how want to join on a little trip on Sunday afternoon.
+            </p>
+            <iframe src="https://www.google.com/maps/d/embed?mid=1A3UQ5f9J6AkcC4AB6iHDl-QSn7jzdAM&ehbc=2E312F" width="640" height="480"></iframe>
+        </div>
+        </div>
+
         <div style="width:1px; height:1px; visibility:hidden; overflow:hidden">
             <img src="static/images/img2.jpg" /><img src="static/images/img3.jpg" /><img src="static/images/img4.jpg" />
         </div>
